[package]
name = "Cast_ray"
version = "0.1.0"
edition = "2021"

[dependencies]
pixels = "0.9.0"  # Reemplazo de minifb
nalgebra = "0.30.1"
nalgebra-glm = "0.14.0"
winit = "0.26.0"  # Para manejar eventos de ventanas y entradas
image = "0.25.2"
once_cell = "1.8.0"
rusttype = "0.9.2" # Para renderizar texto (FPS)
rodio = "0.14"